<resources>
    <string name="app_name">BroadCastBestPractice</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_text">UserName:</string>
    <string name="user_hint">请输入用户名</string>
    <string name="passwd_text">Password:</string>
    <string name="passwd_hint">请输入密码</string>
    <string name="login">Login</string>
    <string name="force_offline">send force offline broadcast</string>
</resources>
