<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_text" />

        <EditText
            android:id="@+id/user_et"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/passwd_tv"
            android:layout_width="90dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/passwd_text" />

        <EditText
            android:id="@+id/passwd_et"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwd_hint"
            android:inputType="textPassword" />

    </LinearLayout>
    
    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

</LinearLayout>